--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,9 +2,16 @@
 name = "transcribe-rust"
 version = "0.1.0"
 edition = "2021"
+build = "build.rs"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 gtk4 = "0.7.0"
 gio = "0.18.0"
+
+[profile.dev]
+opt-level = 0
+
+[profile.release]
+opt-level = 3
