--- a/release/macos/Info.plist
+++ b/release/macos/Info.plist
@@ -20,5 +20,7 @@
     <string>10.10.0</string>
     <key>NSHighResolutionCapable</key>
     <true/>
+    <key>NSMicrophoneUsageDescription</key>
+    <string>This app requires access to the microphone to transcribe audio.</string>
 </dict>
 </plist>
